--- a/src/site.html
+++ b/src/site.html
@@ -53,7 +53,7 @@
 
 
 <div class="max-w-screen-xl mx-auto px-4 my-10">
-    <!-- Your website sections here -->
+   
     <section class="flex flex-col md:flex-row items-center justify-center py-10">
         <div class="md:w-1/2">
             <img src="https://demo.hasthemes.com/coffee-hutt/img/welcome/1.jpg" alt="Website Image" class="w-full">
@@ -123,9 +123,125 @@
     </div>
 </section>
 
+<div class="flex justify-center mb-8">
+    <nav aria-label="Page navigation example" class="items-center">
+      <ul class="inline-flex -space-x-px text-sm items-center">
+        <li>
+          <a href="#" class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</a>
+        </li>
+        <li>
+          <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">1</a>
+        </li>
+        <li>
+          <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">2</a>
+        </li>
+        <li>
+          <a href="#" aria-current="page" class="flex items-center justify-center px-3 h-8 text-blue-600 border border-gray-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">3</a>
+        </li>
+        <li>
+          <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">4</a>
+        </li>
+        <li>
+          <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">5</a>
+        </li>
+        <li>
+          <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Next</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
+  <div class="max-w-4xl mx-auto py-8">
+    <div class="text-center">
+        <h1 class="text-4xl font-bold text-gray-800">Horké nápoje</h1>
+        <div class="h-px bg-gray-300 my-4"></div>
+    </div>
 </div>
 
+<section class="flex justify-center py-10">
+<div class="w-1/3 mx-2">
+    <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="card1.jpg" alt="Card Image" class="w-full">
+        <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">Card 1</h3>
+            <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+        </div>
+    </div>
+</div>
+<div class="w-1/3 mx-2">
+    <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="card2.jpg" alt="Card Image" class="w-full">
+        <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">Card 2</h3>
+            <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+        </div>
+    </div>
+</div>
+<div class="w-1/3 mx-2">
+    <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="card3.jpg" alt="Card Image" class="w-full">
+        <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">Card 3</h3>
+            <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+        </div>
+    </div>
+</div>
+<div class="w-1/3 mx-2">
+    <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="card3.jpg" alt="Card Image" class="w-full">
+        <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">Card 3</h3>
+            <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+        </div>
+    </div>
+</div>
+<div class="w-1/3 mx-2">
+    <div class="bg-white shadow-lg rounded-lg overflow-hidden">
+        <img src="card3.jpg" alt="Card Image" class="w-full">
+        <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">Card 3</h3>
+            <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+        </div>
+    </div>
+</div>
+</section>
+
+<div class="flex justify-center mb-8">
+<nav aria-label="Page navigation example" class="items-center">
+  <ul class="inline-flex -space-x-px text-sm items-center">
+    <li>
+      <a href="#" class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</a>
+    </li>
+    <li>
+      <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">1</a>
+    </li>
+    <li>
+      <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">2</a>
+    </li>
+    <li>
+      <a href="#" aria-current="page" class="flex items-center justify-center px-3 h-8 text-blue-600 border border-gray-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white">3</a>
+    </li>
+    <li>
+      <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">4</a>
+    </li>
+    <li>
+      <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">5</a>
+    </li>
+    <li>
+      <a href="#" class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Next</a>
+    </li>
+  </ul>
+</nav>
+</div>
+  
+
+    </div>
+
+    
+
+
+
+  
 
 
 <div class="carousel rounded-box">
