--- a/src/site.html
+++ b/src/site.html
@@ -98,12 +98,10 @@
     <section class="flex flex-col md:flex-col py-3 my-0" id="kdoJsmeSection">
       <div class="max-w-4xl mx-auto py-8">
         <div class="text-center">
-            <h1 class="text-4xl font-bold text-gray-800">Kdo jsme?</h1>
-            <div class="h-px bg-gray-300 my-4"></div>
+          <h2 class="text-4xl font-bold mb-4">About Us</h2>
+          <p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod, nunc eget aliquet lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc. Sed euismod, nunc eget aliquet lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc.</p>
         </div>
-    </div>
-    <div class="max-w-4xl mx-auto py-3">
-    <p>ahojjahojjahojjahojjahojjahojjahojjahojjahojjahojjahojjahojjahojjahojjahojjahojjahojj</p>
+    
     </div>
   </section>
 
@@ -120,17 +118,7 @@
 
   
 
-<div class="inline-flex rounded-md shadow-sm" role="group">
-  <button id="teple-napoje-button" type="button" class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-s-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
-    Teplé nápoje
-  </button>
-  <button id="studene-napoje-button" type="button" class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border-t border-b border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
-    Studené nápoje
-  </button>
-  <button type="button" class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-e-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
-    Bronze 4
-  </button>
-</div>
+
 
 
 
@@ -276,6 +264,17 @@
   </div>
   
 </div>
+<div class="inline-flex rounded-md shadow-sm" role="group">
+  <button id="teple-napoje-button" type="button" class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-s-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
+    Teplé nápoje
+  </button>
+  <button id="studene-napoje-button" type="button" class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border-t border-b border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
+    Studené nápoje
+  </button>
+  <button type="button" class="px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-e-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
+    Bronze 4
+  </button>
+</div>
 </section>
 
 
@@ -305,19 +304,19 @@
     <div class="flex justify-center mb-8">
       <div class="mr-8">
         <h3 class="text-xl font-semibold mb-2">Average Rating</h3>
-        <p id="averageRating" class="text-3xl text-blue-500 font-bold">94</p>
+        <p id="averageRating" class="text-3xl text-blue-500 font-bold counter">94</p>
       </div>
       <div class="mr-8">
         <h3 class="text-xl font-semibold mb-2">Total Reviews</h3>
-        <p id="totalReviews" class="text-3xl text-blue-500 font-bold">0</p>
+        <p id="totalReviews" class="text-3xl text-blue-500 font-bold counter">50</p>
       </div>
       <div class="mr-8">
         <h3 class="text-xl font-semibold mb-2">Positive Reviews</h3>
-        <p id="positiveReviews" class="text-3xl text-green-500 font-bold">0</p>
+        <p id="positiveReviews" class="text-3xl text-green-500 font-bold counter">68</p>
       </div>
       <div>
         <h3 class="text-xl font-semibold mb-2">Negative Reviews</h3>
-        <p id="negativeReviews" class="text-3xl text-red-500 font-bold">0</p>
+        <p id="negativeReviews" class="text-3xl text-red-500 font-bold counter">90</p>
       </div>
     </div>
   </div>
