--- a/src/site.html
+++ b/src/site.html
@@ -64,7 +64,7 @@
 			</ul>
 		</div>
 	</div>
-	<div id="contactCard" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hidden absolute top-full right-4 mt-2">
+	<div id="contactCard" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hidden absolute top-full lg:right-28 md:right-8 -mt-3">
 
 		<div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
 			<a href="#">
@@ -468,8 +468,8 @@
 		<div class="flex flex-col md:flex-row justify-center mb-8">
 			<div class="bg-white rounded-lg shadow-md p-6 mb-4 md:mb-0 md:mr-4">
 				<h3 class="text-xl font-semibold mb-2">TripAdvisor Reviews</h3>
-				<p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis nulla ac
-					mi eleifend vehicula.</p>
+				<p class="text-gray-700">. "Skvělá kavárna s  kávou (i horkou čokoládou) a naprosto vynikajícími dezerty"
+					.</p>
 			</div>
 			<div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
 				<h3 class="text-xl font-semibold mb-2">Google Reviews</h3>
