--- a/src/site.html
+++ b/src/site.html
@@ -64,7 +64,7 @@
 			</ul>
 		</div>
 	</div>
-	<div id="contactCard" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hidden absolute top-full lg:right-28 md:right-8 -mt-3">
+	<div id="contactCard" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hidden absolute top-full lg:right-28 md:right- -mt-3">
 
 		<div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
 			<a href="#">
@@ -509,15 +509,14 @@
 
 <footer class="bg-purple-200">
 <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
-	<div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-2 lg:grid-cols-4">
-	  <div class="sm:col-span-2">
+	<div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-2 lg:grid-cols-3 items-center">
+	  <div class="sm:col-span-1">
 		<a href="/" aria-label="Go home" title="Company" class="inline-flex items-center">
 		  <img class="h-32" src="./restlogo.png" alt="">
-		  <span class="ml-2 text- font-bold tracking-wide text-gray-800 uppercase">Rest Café</span>
 		</a>
 		
 	  </div>
-	  <div class="space-y-2 text-sm">
+	  <div class="space-y-2 text-sm flex flex-col item">
 		<p class="text-base font-bold tracking-wide text-gray-900">Kontakt</p>
 		<div class="flex">
 		  <p class="mr-1 text-gray-800">Phone:</p>
