--- a/src/site.html
+++ b/src/site.html
@@ -509,14 +509,14 @@
 
 <footer class="bg-purple-200">
 <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
-	<div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-2 lg:grid-cols-3 items-center">
+	<div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-3 lg:grid-cols-3 items-center">
 	  <div class="sm:col-span-1">
 		<a href="/" aria-label="Go home" title="Company" class="inline-flex items-center">
 		  <img class="h-32" src="./restlogo.png" alt="">
 		</a>
 		
 	  </div>
-	  <div class="space-y-2 text-sm flex flex-col item">
+	  <div class="space-y-2 text-sm flex flex-col">
 		<p class="text-base font-bold tracking-wide text-gray-900">Kontakt</p>
 		<div class="flex">
 		  <p class="mr-1 text-gray-800">Phone:</p>
