--- a/src/site.html
+++ b/src/site.html
@@ -91,37 +91,13 @@
 
 
 <section class="bg-slate-500 flex flex-col justify-center pt-9 min-h-screen md:w-full">
-	<header class="container relative items-center flex flex-col justify-center items-center py-12">
+	<header class="container relative items-center flex flex-col justify-center items-center py-12 sm:pt-20">
 		<h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center">Welcome to Rest Caaafé</h1>
 		<p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 lg:w-1/2 xl:w-2/5">Lorem
 			ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod, nunc eget aliquet lacinia,
 			mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc. Sed euismod, nunc eget aliquet lacinia, mauris
 			nunc tincidunt nunc, id tincidunt urna ligula id nunc.</p>
 	</header>
-
-	<!-- Info Cards -->
-
-	<div class="flex flex-col md:flex-row justify-center mt-8 md:mt-16 space-y-6 md:space-y-0 md:space-x-6">
-		<!-- First Info Card -->
-		<div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
-			<div class="px-6 py-4">
-				<div class="font-bold text-xl mb-2">Výběrová káva</div>
-				<p class="text-gray-700 text-base">We pride ourselves on serving the finest specialty coffee sourced
-					from around the world. Each cup is meticulously brewed to perfection by our skilled baristas.</p>
-			</div>
-		</div>
-
-		<!-- Second Info Card -->
-		<div class="max-w-sm rounded-md overflow-hidden shadow-lg bg-white">
-			<div class="px-6 py-4">
-				<div class="font-bold text-xl mb-2">Příjemná atmosféra</div>
-				<p class="text-gray-700 text-base">Relax and unwind in our cozy café atmosphere. Whether you're catching
-					up with friends or enjoying some quiet time alone, we provide the perfect ambiance for every
-					occasion.</p>
-			</div>
-		</div>
-	</div>
-
 </section>
 
 
@@ -162,17 +138,17 @@
 <div class="menu flex items-center">
 
 	<section class="items-center flex flex-col" id="nabidka-menu">
-		<div class="inline-flex rounded-md shadow-sm pb-4 gap-6" role="group">
+		<div class="inline-flex rounded-md shadow-sm pb-4 gap-6 sm:gap-4" role="group">
 			<button id="teple-napoje-button" type="button"
-					class="px-8 py-4 text-xl font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
+					class="px-8 py-4 text-xl sm:text-base sm:px-2 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 				Teplé nápoje
 			</button>
 			<button id="studene-napoje-button" type="button"
-			class="px-8 py-4 text-xl font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
+			class="px-8 py-4 text-xl sm:text-base sm:px-2 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 			Studené nápoje
 			</button>
 			<button id="zakusky-button" type="button"
-					class="px-8 py-4 text-xl font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white">
+					class="px-8 py-4 text-xl sm:text-base sm:px-2 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 				Zákusky
 			</button>
 		</div>
@@ -466,11 +442,6 @@
 
 		<!-- Review Sources -->
 		<div class="flex flex-col md:flex-row justify-center mb-8">
-			<div class="bg-white rounded-lg shadow-md p-6 mb-4 md:mb-0 md:mr-4">
-				<h3 class="text-xl font-semibold mb-2">TripAdvisor Reviews</h3>
-				<p class="text-gray-700">. "Skvělá kavárna s  kávou (i horkou čokoládou) a naprosto vynikajícími dezerty"
-					.</p>
-			</div>
 			<div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
 				<h3 class="text-xl font-semibold mb-2">Google Reviews</h3>
 				<div class="flex items-center mb-2">
@@ -484,32 +455,12 @@
 			</div>
 			
 		</div>
-
-		<!-- Review Stats -->
-		<div class="flex justify-center mb-8">
-			<div class="mr-8">
-				<h3 class="text-xl font-semibold mb-2">Počet recenzí</h3>
-				<p id="averageRating" class="text-3xl text-blue-500 font-bold counter">239</p>
-			</div>
-			<div class="mr-8">
-				<h3 class="text-xl font-semibold mb-2">Pozitivních recenzí</h3>
-				<p id="totalReviews" class="text-3xl text-blue-500 font-bold counter">221</p>
-			</div>
-			<div class="mr-8">
-				<h3 class="text-xl font-semibold mb-2">Positive Reviews</h3>
-				<p id="positiveReviews" class="text-3xl text-green-500 font-bold counter">68</p>
-			</div>
-			<div>
-				<h3 class="text-xl font-semibold mb-2">Negative Reviews</h3>
-				<p id="negativeReviews" class="text-3xl text-red-500 font-bold counter">90</p>
-			</div>
-		</div>
 	</div>
 </section>
 
 <footer class="bg-purple-200">
 <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
-	<div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-3 lg:grid-cols-3 items-center">
+	<div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-3 lg:grid-cols-3">
 	  <div class="sm:col-span-1">
 		<a href="/" aria-label="Go home" title="Company" class="inline-flex items-center">
 		  <img class="h-32" src="./restlogo.png" alt="">
@@ -517,24 +468,24 @@
 		
 	  </div>
 	  <div class="space-y-2 text-sm flex flex-col">
-		<p class="text-base font-bold tracking-wide text-gray-900">Kontakt</p>
+		<p class="text-base font-bold tracking-wide text-white">Kontakt</p>
 		<div class="flex">
-		  <p class="mr-1 text-gray-800">Phone:</p>
+		  <p class="mr-1 text-white">Phone:</p>
 		  <a href="tel:123-456-789" aria-label="Our phone" title="Our phone" class="transition-colors duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">+420 123 456 789</a>
 		</div>
 		<div class="flex">
-		  <p class="mr-1 text-gray-800">Email:</p>
+		  <p class="mr-1 text-white">Email:</p>
 		  <a href="mailto:test@seznam.cz" aria-label="Our email" title="Our email" class="transition-colors duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">info@restcafe.cz</a>
 		</div>
 		<div class="flex">
-		  <p class="mr-1 text-gray-800">Adresa:</p>
+		  <p class="mr-1 text-white">Adresa:</p>
 		  <a href="https://www.google.com/maps/place/Rest+Cafe/@50.0827484,14.4241915,17z/data=!3m1!4b1!4m6!3m5!1s0x470b954ba8aaa593:0x60a134159de605ea!8m2!3d50.082745!4d14.4267664!16s%2Fg%2F11r4ryjcq8?entry=ttu" target="_blank" rel="noopener noreferrer" aria-label="Our address" title="Our address" class="transition-colors duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">
 			Jindřišská 2, 110 00, Praha 1
 		  </a>
 		</div>
 	  </div>
 	  <div>
-		<span class="text-base font-bold tracking-wide text-gray-900">Sledujte nás</span>
+		<span class="text-base font-bold tracking-wide text-white">Sledujte nás</span>
 		<div class="flex items-center mt-1 space-x-3">
 		  <a href="/" class="text-gray-500 transition-colors duration-300 hover:text-deep-purple-accent-400">
 			<svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
@@ -559,13 +510,10 @@
 			</svg>
 		  </a>
 		</div>
-		<p class="mt-4 text-sm text-gray-500">
-		  Bacon ipsum dolor amet short ribs pig sausage prosciutto chicken spare ribs salami.
-		</p>
 	  </div>
 	</div>
 	<div class="flex flex-col-reverse justify-between pt-5 pb-10 border-t lg:flex-row">
-	  <p class="text-sm text-gray-600">
+	  <p class="text-sm text-white">
 		© Copyright 2024 Pham Kučera Productions.
 	  </p>
 	  <!-- <ul class="flex flex-col mb-3 space-y-2 lg:mb-0 sm:space-y-0 sm:space-x-5 sm:flex-row">
