--- a/src/site.html
+++ b/src/site.html
@@ -19,15 +19,14 @@
 
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
 	<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+		<div>
 		<a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
 			<img src="./restlogo.png" class="h-8" alt="restcafe logo">
 			<span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Rest Café</span>
 		</a>
-		<div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-			<button type="button" id="toggleCard"
-					class="text-white bg-red-900 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-				Kontakt
-			</button>
+		</div>
+		<div class="flex md:order-2 md:hidden space-x-3 md:space-x-0 rtl:space-x-reverse">
+			
 			<button data-collapse-toggle="navbar-sticky" type="button"
 					class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
 					aria-controls="navbar-sticky" aria-expanded="false">
@@ -62,28 +61,12 @@
 						nás najdete?</a>
 				</li>
 			</ul>
+			
+			
 		</div>
+		
 	</div>
-	<div id="contactCard" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow hidden absolute top-full lg:right-28 md:right- -mt-3">
 
-		<div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-			<a href="#">
-				<img class="rounded-t-lg" src="/docs/images/blog/image-1.jpg" alt="" />
-			</a>
-			<div class="p-5">
-				<a href="#">
-					<h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Noteworthy technology acquisitions 2021</h5>
-				</a>
-				<p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
-				<a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-					Read more
-					 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-					</svg>
-				</a>
-			</div>
-		</div>
-		</div>
 </nav>
 
 
