--- a/src/site.html
+++ b/src/site.html
@@ -39,11 +39,12 @@
 			</button>
 		</div>
 		<div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-			<ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+			<ul id="list-items-burger" class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
 				<li>
 					<a href="#"
 					   class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
-					   aria-current="page">Domů</a>
+					   aria-current="page"
+					   id="domu-button">Domů</a>
 				</li>
 				<li>
 					<a href=""
@@ -57,8 +58,8 @@
 				</li>
 				<li>
 					<a href="#"
-					   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Kde
-						nás najdete?</a>
+					   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
+					   id="kde-najit">Kde	nás najdete?</a>
 				</li>
 			</ul>
 			
@@ -418,7 +419,7 @@
 </button>
 
 
-<section class="bg-gray-100 py-16">
+<section class="bg-gray-100 py-16" id="hodnoceni-reviews">
 	<div class="max-w-4xl mx-auto px-4">
 		<h2 class="text-3xl font-bold mb-4 text-center">Naše hodnocení</h2>
 		<p class="text-lg text-gray-700 mb-8 text-center">Podívejte se, co o nás říkají naši zákazníci.</p>
