--- a/src/site.html
+++ b/src/site.html
@@ -419,7 +419,7 @@
 </button>
 
 
-<section class="bg-gray-100 py-16" id="hodnoceni-reviews">
+<section class="bg-gray-100 pt-16 pb-7" id="hodnoceni-reviews">
 	<div class="max-w-4xl mx-auto px-4">
 		<h2 class="text-3xl font-bold mb-4 text-center">Naše hodnocení</h2>
 		<p class="text-lg text-gray-700 mb-8 text-center">Podívejte se, co o nás říkají naši zákazníci.</p>
@@ -439,7 +439,22 @@
 			</div>
 			
 		</div>
+		
 	</div>
+	
+</section>
+
+<section class="bg-white py-16" id="location">
+	<div class="max-w-7xl mx-auto px-4">
+		<h2 class="text-3xl font-bold mb-4 text-center">Kde nás najdete?</h2>
+		<p class="text-lg text-gray-700 mb-8 text-center">Nacházíme se v samém srdci Václavského náměstí.</p>
+
+		<a href="https://www.google.com/maps/place/Rest+Cafe/@50.0827484,14.4241915,17z/data=!3m1!4b1!4m6!3m5!1s0x470b954ba8aaa593:0x60a134159de605ea!8m2!3d50.082745!4d14.4267664!16s%2Fg%2F11r4ryjcq8?entry=ttu" target="_blank">
+			<img class="container " src="./restMap.svg" alt="">
+		</a>
+		
+	</div>
+	
 </section>
 
 <footer class="bg-purple-200">
@@ -541,5 +556,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 <script src="script.js" type="module"></script>
+
 </body>
 </html>
