--- a/src/site.html
+++ b/src/site.html
@@ -44,7 +44,7 @@
 					<a href="#"
 					   class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
 					   aria-current="page"
-					   id="domu-button">Domů</a>
+					   id="domu-button">Idiot</a>
 				</li>
 				<li>
 					<a href=""
