--- a/src/site.html
+++ b/src/site.html
@@ -44,7 +44,7 @@
 					<a href="#"
 					   class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
 					   aria-current="page"
-					   id="domu-button">Idiot</a>
+					   id="domu-button">Domů</a>
 				</li>
 				<li>
 					<a href=""
@@ -74,7 +74,7 @@
 
 
 
-<section class="bg-slate-500 flex flex-col justify-center pt-9 min-h-screen md:w-full">
+<section class="bg-custom-purple bg-custom-gradient flex flex-col justify-center pt-9 min-h-screen md:w-full">
 	<header class="container relative items-center flex flex-col justify-center items-center py-12 sm:pt-20">
 		<h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center">Welcome to Rest Caaafé</h1>
 		<p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 lg:w-1/2 xl:w-2/5">Lorem
@@ -88,7 +88,7 @@
 <div class="max-w-screen-xl mx-auto px-4 my-10 justify-center items-center">
 
 
-	<section class="flex flex-col md:flex-row items-center justify-center py-3 my-0">
+	<!-- <section class="flex flex-col md:flex-row items-center justify-center py-3 my-0">
 		<div class="md:w-1/2">
 			<img src="https://demo.hasthemes.com/coffee-hutt/img/welcome/1.jpg" alt="Website Image" class="w-full">
 		</div>
@@ -99,21 +99,56 @@
 				nunc eget aliquet lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc.</p>
 			<a href="#" class="text-blue-500 hover:underline">Learn More</a>
 		</div>
-	</section>
+	</section> -->
 
 	<!-- KDO JSME? -->
-	<section class="flex flex-col md:flex-col py-3 my-0" id="kdoJsmeSection">
-		<div class="max-w-4xl mx-auto py-8">
-			<div class="text-center">
-				<h2 class="text-4xl font-bold mb-4">About Us</h2>
-				<p class="text-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod,
-					nunc eget aliquet lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc. Sed
-					euismod, nunc eget aliquet lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id
-					nunc.</p>
-			</div>
+	<section class="bg-bookmark-white py-2 mt-2 lg:mt-6">
+        <!-- HEADING -->
+        <!-- <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
+            <h1 class="text-3xl text-center text-bookmark-blue">Featuwrky</h1>
+            <p class="text-center text-bookmark-grey mt-4">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam bibendum elit eget erat. Nunc dapibus tortor vel mi dapibus sollicitudin.
+            </p>
+        </div> -->
+        <!--FEATURES - feature n1-->
+        <div class="relative mt-20 lg:mt-24">
+            <div class="container flex flex-col lg:flex-row items-center justify-center gap-x-24">
+                <!-- obrázek-->
+                <div class="flex flex-1 justify-center z-10 mb-10 lg:mb-0">
+                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./coffee.jpg" alt="">
+                </div>
+                <!-- CONTENT -->
+                <div class="flex flex-1 flex-col items-center lg:items-start">
+                    <h1 class="text-3xl text-bookmark-blue">Káva 1</h1>
+                    <p class="text-bookmark-grey my-4 text-center lg:text-left sm:w-3/4 lg:w-full">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor necessitatibus modi ab sed illum? Beatae iste doloremque illo, voluptas voluptatibus, eius modi laudantium dignissimos aliquid quisquam nam, et alias deleniti quaerat officia? Modi, sint. Quisquam porro quibusdam ducimus nobis at. Recusandae ab quos totam amet, dolore atque accusamus possimus minima itaque iusto, sunt perspiciatis necessitatibus reiciendis placeat voluptates nulla! Itaque sequi amet voluptatum asperiores voluptate, at facilis ratione laborum veniam ducimus laboriosam perferendis nobis quam ab!
+                    </p>
+                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">Více informací</button>
+                </div>
+            </div>
+           
+        </div>
+         <!--FEATURES - feature n2-->
+         <div class="relative mt-20 lg:mt-24">
+            <div class="container flex flex-col lg:flex-row-reverse items-center justify-center gap-x-24">
+                <!-- obrázek-->
+                <div class="flex flex-1 justify-center z-10 mb-10 lg:mb-0">
+                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./coffee.jpg" alt="">
+                </div>
+                <!-- CONTENT -->
+                <div class="flex flex-1 flex-col items-center lg:items-end">
+                    <h1 class="text-3xl text-bookmark-blue">Kávička</h1>
+                    <p class="text-bookmark-grey my-4 text-center md:text-center lg:text-right sm:w-3/4 lg:w-full">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio illo dicta beatae dolore voluptatum accusamus commodi minima voluptas nostrum quae dignissimos? Alias repellat doloremque iste quae voluptas minima laborum fuga nisi adipisci provident, atque error ducimus animi molestias sed. Veniam blanditiis exercitationem quis enim atque laborum nihil laudantium doloremque, temporibus laboriosam praesentium ratione quod cum, voluptates provident tempore. Perferendis saepe vel deserunt dolor vitae eos impedit possimus nam cum temporibus. Atque iste eos fugit obcaecati nisi.
+                    </p>
+                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">Více informací</button>
+                </div>
+            </div>
+  
+        </div>
+        <!--FEATURES - feature n3-->
 
-		</div>
-	</section>
+    </section>
 
 
 </div>
