--- a/src/site.html
+++ b/src/site.html
@@ -104,12 +104,12 @@
 	<!-- KDO JSME? -->
 	<section class="bg-bookmark-white py-2 mt-2 lg:mt-6">
         <!-- HEADING -->
-        <!-- <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
+        <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
             <h1 class="text-3xl text-center text-bookmark-blue">Featuwrky</h1>
             <p class="text-center text-bookmark-grey mt-4">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam bibendum elit eget erat. Nunc dapibus tortor vel mi dapibus sollicitudin.
             </p>
-        </div> -->
+        </div>
         <!--FEATURES - feature n1-->
         <div class="relative mt-20 lg:mt-24">
             <div class="container flex flex-col lg:flex-row items-center justify-center gap-x-24">
@@ -138,7 +138,7 @@
                 <!-- CONTENT -->
                 <div class="flex flex-1 flex-col items-center lg:items-end">
                     <h1 class="text-3xl text-bookmark-blue">Kávička</h1>
-                    <p class="text-bookmark-grey my-4 text-center md:text-center lg:text-right sm:w-3/4 lg:w-full">
+                    <p class="text-bookmark-grey my-4 text-center sm:text-center lg:text-right sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio illo dicta beatae dolore voluptatum accusamus commodi minima voluptas nostrum quae dignissimos? Alias repellat doloremque iste quae voluptas minima laborum fuga nisi adipisci provident, atque error ducimus animi molestias sed. Veniam blanditiis exercitationem quis enim atque laborum nihil laudantium doloremque, temporibus laboriosam praesentium ratione quod cum, voluptates provident tempore. Perferendis saepe vel deserunt dolor vitae eos impedit possimus nam cum temporibus. Atque iste eos fugit obcaecati nisi.
                     </p>
                     <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">Více informací</button>
@@ -154,20 +154,20 @@
 </div>
 
 
-<div class="menu flex items-center">
+<div class="menu flex items-center container mx-auto">
 
-	<section class="items-center flex flex-col" id="nabidka-menu">
-		<div class="inline-flex rounded-md shadow-sm pb-4 gap-6 sm:gap-4" role="group">
+	<section class="items-center flex flex-col mx-auto" id="nabidka-menu">
+		<div class="inline-block sm:flex items-center rounded-md shadow-sm gap-1 sm:gap-8" role="group">
 			<button id="teple-napoje-button" type="button"
-					class="px-8 py-4 text-xl sm:text-base sm:px-2 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
+					class="px-2 py-4 text-xl sm:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 				Teplé nápoje
 			</button>
 			<button id="studene-napoje-button" type="button"
-			class="px-8 py-4 text-xl sm:text-base sm:px-2 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
+			class="px-2 py-4 text-xl sm:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 			Studené nápoje
 			</button>
 			<button id="zakusky-button" type="button"
-					class="px-8 py-4 text-xl sm:text-base sm:px-2 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
+					class="px-2 py-4 text-xl sm:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 				Zákusky
 			</button>
 		</div>
@@ -454,7 +454,7 @@
 </button>
 
 
-<section class="bg-gray-100 pt-16 pb-7" id="hodnoceni-reviews">
+<section class="bg-gray-100 pt-16 pb-7 container" id="hodnoceni-reviews">
 	<div class="max-w-4xl mx-auto px-4">
 		<h2 class="text-3xl font-bold mb-4 text-center">Naše hodnocení</h2>
 		<p class="text-lg text-gray-700 mb-8 text-center">Podívejte se, co o nás říkají naši zákazníci.</p>
@@ -485,7 +485,7 @@
 		<p class="text-lg text-gray-700 mb-8 text-center">Nacházíme se v samém srdci Václavského náměstí.</p>
 
 		<a href="https://www.google.com/maps/place/Rest+Cafe/@50.0827484,14.4241915,17z/data=!3m1!4b1!4m6!3m5!1s0x470b954ba8aaa593:0x60a134159de605ea!8m2!3d50.082745!4d14.4267664!16s%2Fg%2F11r4ryjcq8?entry=ttu" target="_blank">
-			<img class="container " src="./restMap.svg" alt="">
+			<img class="container " src="./restmap2.svg" alt="">
 		</a>
 		
 	</div>
@@ -501,7 +501,7 @@
 		</a>
 		
 	  </div>
-	  <div class="space-y-2 text-sm flex flex-col">
+	  <div class="space-y-2 text-lg sm:text-sm flex flex-col">
 		<p class="text-base font-bold tracking-wide text-white">Kontakt</p>
 		<div class="flex">
 		  <p class="mr-1 text-white">Phone:</p>
@@ -519,16 +519,12 @@
 		</div>
 	  </div>
 	  <div>
-		<span class="text-base font-bold tracking-wide text-white">Sledujte nás</span>
+		<span class="sm:text-base text-lg font-bold tracking-wide text-white">Sledujte nás</span>
 		<div class="flex items-center mt-1 space-x-3">
 		  <a href="/" class="text-gray-500 transition-colors duration-300 hover:text-deep-purple-accent-400">
-			<svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
-			  <path
-				d="M24,4.6c-0.9,0.4-1.8,0.7-2.8,0.8c1-0.6,1.8-1.6,2.2-2.7c-1,0.6-2,1-3.1,1.2c-0.9-1-2.2-1.6-3.6-1.6 c-2.7,0-4.9,2.2-4.9,4.9c0,0.4,0,0.8,0.1,1.1C7.7,8.1,4.1,6.1,1.7,3.1C1.2,3.9,1,4.7,1,5.6c0,1.7,0.9,3.2,2.2,4.1 C2.4,9.7,1.6,9.5,1,9.1c0,0,0,0,0,0.1c0,2.4,1.7,4.4,3.9,4.8c-0.4,0.1-0.8,0.2-1.3,0.2c-0.3,0-0.6,0-0.9-0.1c0.6,2,2.4,3.4,4.6,3.4 c-1.7,1.3-3.8,2.1-6.1,2.1c-0.4,0-0.8,0-1.2-0.1c2.2,1.4,4.8,2.2,7.5,2.2c9.1,0,14-7.5,14-14c0-0.2,0-0.4,0-0.6 C22.5,6.4,23.3,5.5,24,4.6z"
-			  ></path>
-			</svg>
+			
 		  </a>
-		  <a href="/" class="text-gray-500 transition-colors duration-300 hover:text-deep-purple-accent-400">
+		  <a href="https://www.instagram.com/restcafe.cz/" class="text-gray-500 transition-colors duration-300 hover:text-deep-purple-accent-400" target="_blank">
 			<svg viewBox="0 0 30 30" fill="currentColor" class="h-6">
 			  <circle cx="15" cy="15" r="4"></circle>
 			  <path
@@ -536,7 +532,7 @@
 			  ></path>
 			</svg>
 		  </a>
-		  <a href="/" class="text-gray-500 transition-colors duration-300 hover:text-deep-purple-accent-400">
+		  <a href="https://www.facebook.com/restcafecz/" class="text-gray-500 transition-colors duration-300 hover:text-deep-purple-accent-400" target="_blank">
 			<svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
 			  <path
 				d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z"
