--- a/src/site.html
+++ b/src/site.html
@@ -104,30 +104,29 @@
 	<!-- KDO JSME? -->
 	<section class="bg-bookmark-white py-2 mt-2 lg:mt-6">
         <!-- HEADING -->
-        <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
+        <div class="sm:w-3/4 lg:w-5/12 mx-auto pt-24 px-2">
             <h1 class="text-3xl text-center text-bookmark-blue">Featuwrky</h1>
             <p class="text-center text-bookmark-grey mt-4">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam bibendum elit eget erat. Nunc dapibus tortor vel mi dapibus sollicitudin.
             </p>
         </div>
         <!--FEATURES - feature n1-->
-        <div class="relative mt-20 lg:mt-24">
-            <div class="container flex flex-col lg:flex-row items-center justify-center gap-x-24">
-                <!-- obrázek-->
-                <div class="flex flex-1 justify-center z-10 mb-10 lg:mb-0">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./coffee.jpg" alt="">
-                </div>
-                <!-- CONTENT -->
-                <div class="flex flex-1 flex-col items-center lg:items-start">
-                    <h1 class="text-3xl text-bookmark-blue">Káva 1</h1>
-                    <p class="text-bookmark-grey my-4 text-center lg:text-left sm:w-3/4 lg:w-full">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor necessitatibus modi ab sed illum? Beatae iste doloremque illo, voluptas voluptatibus, eius modi laudantium dignissimos aliquid quisquam nam, et alias deleniti quaerat officia? Modi, sint. Quisquam porro quibusdam ducimus nobis at. Recusandae ab quos totam amet, dolore atque accusamus possimus minima itaque iusto, sunt perspiciatis necessitatibus reiciendis placeat voluptates nulla! Itaque sequi amet voluptatum asperiores voluptate, at facilis ratione laborum veniam ducimus laboriosam perferendis nobis quam ab!
-                    </p>
-                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">Více informací</button>
-                </div>
-            </div>
-           
-        </div>
+		<div class="relative mt-20 lg:mt-24">
+			<div class="container flex flex-col lg:flex-row items-center justify-center gap-x-24">
+				<!-- obrázek-->
+				<div class="flex flex-1 justify-center z-10 mb-10 lg:mb-0">
+					<img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./coffee.jpg" alt="">
+				</div>
+				<!-- CONTENT -->
+				<div class="flex flex-1 flex-col items-center">
+					<h1 class="text-3xl text-bookmark-blue">Káva 1</h1>
+					<p class="text-bookmark-grey my-4 text-center sm:w-3/4 lg:w-full">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor necessitatibus modi ab sed illum? Beatae iste doloremque illo.
+					</p>
+				</div>
+			</div>
+
+		</div>
          <!--FEATURES - feature n2-->
          <div class="relative mt-20 lg:mt-24">
             <div class="container flex flex-col lg:flex-row-reverse items-center justify-center gap-x-24">
@@ -136,17 +135,32 @@
                     <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./coffee.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
-                <div class="flex flex-1 flex-col items-center lg:items-end">
+                <div class="flex flex-1 flex-col items-center">
                     <h1 class="text-3xl text-bookmark-blue">Kávička</h1>
-                    <p class="text-bookmark-grey my-4 text-center sm:text-center lg:text-right sm:w-3/4 lg:w-full">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio illo dicta beatae dolore voluptatum accusamus commodi minima voluptas nostrum quae dignissimos? Alias repellat doloremque iste quae voluptas minima laborum fuga nisi adipisci provident, atque error ducimus animi molestias sed. Veniam blanditiis exercitationem quis enim atque laborum nihil laudantium doloremque, temporibus laboriosam praesentium ratione quod cum, voluptates provident tempore. Perferendis saepe vel deserunt dolor vitae eos impedit possimus nam cum temporibus. Atque iste eos fugit obcaecati nisi.
+                    <p class="text-bookmark-grey my-4 text-center sm:text-center sm:w-3/4 lg:w-full">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio illo dicta beatae dolore voluptatum accusamus.
                     </p>
-                    <button type="button" class="btn btn-purple hover:bg-bookmark-white hover:text-black">Více informací</button>
                 </div>
             </div>
   
         </div>
         <!--FEATURES - feature n3-->
+		<div class="relative mt-20 lg:mt-24">
+			<div class="container flex flex-col lg:flex-row items-center justify-center gap-x-24">
+				<!-- obrázek-->
+				<div class="flex flex-1 justify-center z-10 mb-10 lg:mb-0">
+					<img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./coffee.jpg" alt="">
+				</div>
+				<!-- CONTENT -->
+				<div class="flex flex-1 flex-col items-center">
+					<h1 class="text-3xl text-bookmark-blue">Káva 1</h1>
+					<p class="text-bookmark-grey my-4 text-center sm:w-3/4 lg:w-full">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor necessitatibus modi ab sed illum? Beatae iste doloremque illo.
+					</p>
+				</div>
+			</div>
+
+		</div>
 
     </section>
 
@@ -159,15 +173,15 @@
 	<section class="items-center flex flex-col mx-auto" id="nabidka-menu">
 		<div class="inline-block sm:flex items-center rounded-md shadow-sm gap-1 sm:gap-8" role="group">
 			<button id="teple-napoje-button" type="button"
-					class="px-2 py-4 text-xl sm:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
+					class="px-2 py-4 sm:text-xl xs:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 				Teplé nápoje
 			</button>
 			<button id="studene-napoje-button" type="button"
-			class="px-2 py-4 text-xl sm:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
+			class="px-2 py-4 sm:text-xl xs:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 			Studené nápoje
 			</button>
 			<button id="zakusky-button" type="button"
-					class="px-2 py-4 text-xl sm:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
+					class="px-2 py-4 sm:text-xl xs:text-base sm:px-8 font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-2 focus:ring-blue-700 focus:text-blue-700 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-blue-500 dark:focus:text-white sm:line-height">
 				Zákusky
 			</button>
 		</div>
